--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
-        <title>Horiseon - Search Engine Optimization, Online Reputation Managemet, and Social Media Marketing</title>
+        <title>Horiseon - Official Company Website</title>
     </head>
     
     <body>
@@ -12,9 +12,9 @@
             <h1>Hori<span class="seo">seo</span>n</h1>
             <div>
                 <ul>
-                    <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
-                    <li><a href="#online-reputation-management">Online Reputation Management</a></li>
-                    <li><a href="#social-media-marketing">Social Media Marketing</a></li>
+                    <li><a href="#search-engine-optimization" class="button">Search Engine Optimization</a></li>
+                    <li><a href="#online-reputation-management" class="button">Online Reputation Management</a></li>
+                    <li><a href="#social-media-marketing" class="button">Social Media Marketing</a></li>
                 </ul>
             </div>
         </div>
