--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             </div>
         </div>
         
-        <div class="footer">
+        <footer>
             <h4>Made with ❤️️ by Horiseon</h4>
             <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
-        </div>
+        <footer>
 
     </body>
 
